# FinSight

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  render.yaml
.claude/: settings.local.json
backend/: __init__.py  main.py  pyproject.toml
backend/scripts/: init_db.py
backend/tests/: test_health.py
frontend/: .eslintrc.cjs  index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/styles/: globals.css
